--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
   <h3>Tuesday, December 2, 2025, 1:30pm -> 4:00pm</h3>
   <h3><i>NeurIPS 2025</i>, San Diego Convention Center, Exhibit Hall G,H</h3>
   
-  <h3>Presenters</h3>
   <div class="presenters-container">
     <div class="profile-box">
       <img src="https://mars-tin.github.io/images/avatar_real.jpg" alt="Presenter 1">
@@ -150,6 +149,10 @@
       <div class="affiliation">Meta Superintelligence</div>
     </div>
   </div>
+
+  <h3><a href="https://benchmarking.science">https://benchmarking.science</a></h3>
+
+
   <hr>
   <!-- <p style="text-align: left;"><b>Abstract:</b> As ML shifts toward ever-larger models and general-purpose systems driven by
     scaling laws, benchmarks have become both more influential and more contested. While large-scale,
