--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       body {
         background: #d8d5c4;
         color: #111;
+        font-size: 20px;
       }
       .container {
         width: calc(min(900px, 100vw - 48px));
@@ -79,6 +80,7 @@
       p {
         margin: 12px 0;
       font-stretch: semi-condensed;
+      color: #666;
       }
       figure {
         margin: 24px auto 48px;
