--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       :root {
         color-scheme: light;
         font-family: "Berkeley Mono", monospace;
-        background: #d8d5c4;
+        background: #e9e7d9;
         color: #111;
       }
       .floating-center {
@@ -21,7 +21,7 @@
         
       }
       body {
-        background: #d8d5c4;
+        background: #e9e7d9;
         color: #111;
         font-size: 20px;
       }
@@ -113,14 +113,14 @@
         aspect-ratio: 1;
         display: block;
         margin-bottom: 12px;
-        background: #d8d5c4;
+        background: #e9e7d9;
         filter: grayscale(1);
         mix-blend-mode: multiply;
       }
       .container .presenters-container .profile-box {
-        min-width: 150px;
-        max-width: 150px;
-        flex: 0 0 150px;
+        min-width: 300px;
+        max-width: 300px;
+        flex: 0 0 300px;
         word-break: break-word;
       }
       .profile-box .name {
@@ -208,7 +208,7 @@
     </main>
       <main class="container">
       <h1>Panelists</h1>
-      <p>We are excited to share a conversation with a diverse group of experts in academia and industry, working in AI ethics, dynamic evaluations for frontier capabilities, AI safety, and more.</p>
+      <!-- <p>We are excited to share a conversation with a diverse group of experts in academia and industry, working in AI ethics, dynamic evaluations for frontier capabilities, AI safety, and more.</p> -->
       <div class="presenters-container">
         <div class="profile-box">
           <img src="https://static.wixstatic.com/media/bb2298_9a742a4b56164e90b83cc8c910dfe0ca~mv2.jpg/v1/crop/x_0,y_14,w_699,h_682/fill/w_412,h_402,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/pfp_2025_cropped_JPG.jpg" alt="Presenter 1">
