--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         background: #e9e7d9;
         color: #111;
         font-size: 20px;
+    font-weight: 500;
       }
       .container {
         width: calc(min(900px, 100vw - 48px));
@@ -40,6 +41,7 @@
         margin-bottom: 8px;
         padding-bottom: 8px;
         border-bottom: 1px solid #111;
+    font-weight:900;
 
       }
       h2 {
@@ -47,12 +49,14 @@
         margin-top: 20px;
         margin-bottom: 12px;
         padding-bottom: 6px;
+    font-weight:700;
       }
       h3 {
         font-size: 18px;
         margin-top: 20px;
         margin-bottom: 12px;
         padding-bottom: 6px;
+    font-weight: 700;
       }
       .full-width {
         margin: 0 auto;
@@ -129,7 +133,7 @@
       }
       .profile-box .affiliation {
         font-size: 14px;
-        color: #444;
+    font-weight: 200;
       }
     
      </style>
@@ -139,6 +143,7 @@
 <main class="full-width"><h1 class="title">The Science of Benchmarking</h1>
   <h2>
   What's Measured, What's Missing, What's Next</h2>
+        <h3 style="font-style:italic;">A NeurIPS 2025 Tutorial</h3>
   <h3>Tuesday, December 2, 2025, 1:30pm -> 4:00pm</h3>
   <h3><i>NeurIPS 2025</i>, San Diego Convention Center, Exhibit Hall G,H</h3>
   
