--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:url" content="https://benchmarking.science/" />
     <meta property="og:title" content="NeurIPS 2025: The Science of Benchmarking Tutorial" />
     <meta property="og:description" content="A NeurIPS 2025 tutorial on benchmarking: What's Measured, What's Missing, What's Next. Exploring epistemology, limitations, and emerging paradigms in AI evaluation." />
-    <meta property="og:image" content="https://images.pexels.com/photos/256262/pexels-photo-256262.jpeg" />
+    <meta property="og:image" content="card.jpg" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://benchmarking.science/" />
     <meta property="twitter:title" content="NeurIPS 2025: The Science of Benchmarking Tutorial" />
     <meta property="twitter:description" content="A NeurIPS 2025 tutorial on benchmarking: What's Measured, What's Missing, What's Next. Exploring epistemology, limitations, and emerging paradigms in AI evaluation." />
-    <meta property="twitter:image" content="https://images.pexels.com/photos/256262/pexels-photo-256262.jpeg" />
+    <meta property="twitter:image" content="card.jpg" />
     
     <link rel="stylesheet" href="https://saxon.me/theme/css/fonts.css" />
     <style>
