--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         background: inherit;
         filter: grayscale(1);
         mix-blend-mode: multiply;
+        object-fit: cover;
       }
       .container .presenters-container .profile-box {
         min-width: 300px;
@@ -295,9 +296,13 @@
         <a href="https://www.sainingxie.com/" class="profile-box">
           <img src="https://www.sainingxie.com/imgs/profile_nana_banana.png" alt="Presenter 3">
           <div class="name">Saining Xie</div>
-          <div class="affiliation">Assistant Professor, NYU; Google Deepmind</div>
+          <div class="affiliation">Assistant Professor, NYU</div>
         </a>
-
+        <a href="https://xu1998hz.github.io//" class="profile-box">
+          <img src="https://xu1998hz.github.io/images/wenda_new.jpeg" alt="Presenter 3">
+          <div class="name">Wenda Xu</div>
+          <div class="affiliation">Google Deepmind</div>
+        </a>
       </div>
      
       </main>
