[martin-dev] presenter affiliation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://benchmarking.science/" />
     <meta property="twitter:title" content="NeurIPS 2025: The Science of Benchmarking Tutorial" />
-    <meta property="twitter:description" content="A NeurIPS 2025 tutorial on benchmarking: What's Measured, What's Missing, What's Next. Exploring epistemology, limitations, and emerging paradigms in AI evaluation." />
+    <meta property="twitter:description" content="NeurIPS 2025 tutorial on benchmarking: What's Measured, What's Missing, What's Next. Exploring epistemology, limitations, and emerging paradigms in AI evaluation." />
     <meta property="twitter:image" content="https://benchmarking.science/card.jpg" />
     
     <link rel="stylesheet" href="https://saxon.me/theme/css/fonts.css" />
@@ -206,7 +206,7 @@
 <main class="full-width"><h1 class="title">The Science of Benchmarking</h1>
   <h2>
   What's Measured, What's Missing, What's Next</h2>
-        <h3 style="font-style:italic;">A NeurIPS 2025 Tutorial</h3>
+        <h3 style="font-style:italic;">NeurIPS 2025 Tutorial</h3>
   <h3>Tuesday, December 2, 2025, 1:30pm -> 4:00pm</h3>
   <h3><i>NeurIPS 2025</i>, San Diego Convention Center, Exhibit Hall G,H</h3>
   
@@ -224,7 +224,7 @@
     <a href="https://xiangyue9607.github.io/" class="profile-box">
       <img src="https://xiangyue9607.github.io/images/yuexiang_profile.jpg" alt="Presenter 3">
       <div class="name">Xiang Yue</div>
-      <div class="affiliation">Meta Superintelligence</div>
+      <div class="affiliation">Carnegie Mellon University (Now @ Meta)</div>
     </a>
   </div>
 
