--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <main class="full-width"><h1 class="title">The Science of Benchmarking</h1>
   <h2>
   What's Measured, What's Missing, What's Next</h2>
-  <h3>News: slides are now online: <a href="slides.pdf">/slides.pdf</a></h3>
+  <h3>News: slides available at <a href="slides.pdf">benchmarking.science/slides.pdf</a></h3>
         <h3 style="font-style:italic;">NeurIPS 2025 Tutorial</h3>
   <h3>Tuesday, December 2, 2025, 1:30pm -> 4:00pm</h3>
   <h3><i>NeurIPS 2025</i>, San Diego Convention Center, Exhibit Hall G,H</h3>
