--- a/index.html
+++ b/index.html
@@ -265,12 +265,24 @@
 
       <h2>1. Epistemology, Design & Practice</h2>
       <p>What should we measure? What makes a good benchmark?</p>
+      <div style="width:100%; aspect-ratio:16/9; background: url('https://images.pexels.com/photos/256262/pexels-photo-256262.jpeg') center center / cover no-repeat; display: flex; align-items: center; justify-content: center; margin: 16px 0; filter: grayscale(1); mix-blend-mode: multiply;">
+        <span style="color: white; text-shadow: 0 4px 24px #000, 0 1px 0 #444; font-size: 2.8rem; font-weight: 900; text-align: center; letter-spacing: 0.02em;">
+          Video coming soon
+        </span>
+      </div>
       <h2>2. Limitations</h2>
       <p>What are the main current issues in benchmarking? How is the landscape of models changing to make benchmarks worse? How do people approach it? What should attendees who want to get in to evaluation know?</p>
+      <iframe style="width:100%; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/mDhB-N9KUKM?si=VKwiVbDs7PD8vTd0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <h2>3. Emerging Paradigms</h2>
       <p>How are people addressing these problems? Touching on adversarial methods, dynamic benchmarks, arenas and scaled human evals, simulators & sandboxes, applied interpretability. What can attendees work on?</p>
+      <div style="width:100%; aspect-ratio:16/9; background: url('https://images.pexels.com/photos/256262/pexels-photo-256262.jpeg') center center / cover no-repeat; display: flex; align-items: center; justify-content: center; margin: 16px 0; filter: grayscale(1); mix-blend-mode: multiply;">
+        <span style="color: white; text-shadow: 0 4px 24px #000, 0 1px 0 #444; font-size: 2.8rem; font-weight: 900; text-align: center; letter-spacing: 0.02em;">
+          Video coming soon
+        </span>
+      </div>
       <h2>4. Panel Conversation</h2>
       <p>Panelists from diverse areas will share their perspectives.</p>
+      <iframe style="width:100%; aspect-ratio: 16/9;" src="https://www.youtube.com/embed/d_zXI0EDibs?si=cmtd_2VLWTB7Js6F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 
